zeroconf/avahi/Client: new class, replacing lots of code from ZeroconfAvahi.cxx

--- a/src/zeroconf/avahi/meson.build
+++ b/src/zeroconf/avahi/meson.build
@@ -6,6 +6,8 @@ endif
 
 avahi = static_library(
   'avahi',
+  'Client.cxx',
+  'Error.cxx',
   'Poll.cxx',
   include_directories: inc,
   dependencies: [
