output/snapcast: implement SendTag()

--- a/src/output/plugins/meson.build
+++ b/src/output/plugins/meson.build
@@ -119,7 +119,9 @@ if get_option('snapcast')
     'snapcast/SnapcastOutputPlugin.cxx',
     'snapcast/Client.cxx',
   ]
-  output_plugins_deps += [ event_dep, net_dep ]
+  output_plugins_deps += [ event_dep, net_dep, yajl_dep ]
+
+  output_features.set('HAVE_YAJL', yajl_dep.found())
 
   # TODO: the Snapcast plugin needs just the "wave" encoder, but this
   # enables all available encoders
