zeroconf/avahi/Publisher: new class, replacing lots of code from ZeroconfAvahi.cxx

--- a/src/zeroconf/avahi/meson.build
+++ b/src/zeroconf/avahi/meson.build
@@ -9,6 +9,7 @@ avahi = static_library(
   'Client.cxx',
   'Error.cxx',
   'Poll.cxx',
+  'Publisher.cxx',
   include_directories: inc,
   dependencies: [
     libavahi_client,
