output/pipewire: new output plugin
Very rough draft.  Barely works.

--- a/meson.build
+++ b/meson.build
@@ -360,6 +360,7 @@ subdir('src/lib/gcrypt')
 subdir('src/lib/nfs')
 subdir('src/lib/oss')
 subdir('src/lib/pcre')
+subdir('src/lib/pipewire')
 subdir('src/lib/pulse')
 subdir('src/lib/sndio')
 subdir('src/lib/sqlite')
