output/wasapi: move to separate directory

--- a/src/output/plugins/meson.build
+++ b/src/output/plugins/meson.build
@@ -136,7 +136,7 @@ endif
 output_features.set('ENABLE_WASAPI_OUTPUT', is_windows)
 if is_windows
   output_plugins_sources += [
-    'WasapiOutputPlugin.cxx',
+    'wasapi/WasapiOutputPlugin.cxx',
   ]
   wasapi_dep = [
     c_compiler.find_library('ksuser', required: true),
