.travis.yml: switch to ppa:ricotz/toolchain for ninja 1.8 on Ubuntu Trusty
The old "ppa:mstipicevic/ninja-build-1-7-2" just provides ninja 1.7
which is too old and breaks the build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ jobs:
           sources:
             - ubuntu-toolchain-r-test
             - sourceline: 'ppa:mhier/libboost-latest'
-            - sourceline: 'ppa:mstipicevic/ninja-build-1-7-2'
+            - sourceline: 'ppa:ricotz/toolchain'
             - sourceline: 'ppa:deadsnakes/ppa' # for Python 3.7 (required by Meson)
           packages:
             - g++-8
