--- a/src/decoder/plugins/meson.build
+++ b/src/decoder/plugins/meson.build
@@ -108,6 +108,12 @@ if libmodplug_dep.found()
   ]
 endif
 
+libopenmpt_dep = dependency('libopenmpt', required: get_option('openmpt'))
+decoder_features.set('ENABLE_OPENMPT', libopenmpt_dep.found())
+if libopenmpt_dep.found()
+  decoder_plugins_sources += 'OpenmptDecoderPlugin.cxx'
+endif
+
 libmpcdec_dep = c_compiler.find_library('mpcdec', required: get_option('mpcdec'))
 decoder_features.set('ENABLE_MPCDEC', libmpcdec_dep.found())
 if libmpcdec_dep.found()
@@ -188,6 +194,7 @@ decoder_plugins = static_library(
     libmad_dep,
     libmikmod_dep,
     libmodplug_dep,
+    libopenmpt_dep,
     libmpcdec_dep,
     libmpg123_dep,
     libopus_dep,
