meson.build: define NOUSER on Windows for lighter windows.h
A few exceptions are needed for sources which include COM header
(directly or indirectly).

This fixes lots of shadow warnings, see
https://github.com/MusicPlayerDaemon/MPD/issues/1150

--- a/meson.build
+++ b/meson.build
@@ -156,6 +156,10 @@ if is_windows
 
     # disable more Windows APIs which are not used by MPD
     '-DNOGDI', '-DNOBITMAP', '-DNOCOMM',
+    '-DNOUSER',
+
+    # reduce COM header bloat
+    '-DCOM_NO_WINDOWS_H',
 
     # disable Internet Explorer specific APIs
     '-D_WIN32_IE=0',
