fs/Glob: un-inline the Windows version to reduce header dependencies

--- a/src/fs/meson.build
+++ b/src/fs/meson.build
@@ -3,6 +3,7 @@ fs_sources = [
   'Traits.cxx',
   'Config.cxx',
   'Charset.cxx',
+  'Glob.cxx',
   'Path.cxx',
   'Path2.cxx',
   'AllocatedPath.cxx',
