client/Response: add method Fmt() based on libfmt

--- a/src/output/meson.build
+++ b/src/output/meson.build
@@ -35,6 +35,9 @@ output_glue = static_library(
   'Finish.cxx',
   'Init.cxx',
   include_directories: inc,
+  dependencies: [
+    fmt_dep,
+  ],
 )
 
 output_glue_dep = declare_dependency(
