subprojects/sqlite3.wrap: add SQLite wrap

--- a/src/lib/sqlite/meson.build
+++ b/src/lib/sqlite/meson.build
@@ -1,5 +1,7 @@
 if enable_database
-  sqlite_dep = dependency('sqlite3', version: '>= 3.7.3', required: get_option('sqlite'))
+  sqlite_dep = dependency('sqlite3', version: '>= 3.7.3',
+                          fallback: ['sqlite3', 'sqlite3_dep'],
+                          required: get_option('sqlite'))
 else
   sqlite_dep = dependency('', required: false)
 endif
