decoder/mad, ...: more libfmt logging

--- a/src/filter/plugins/meson.build
+++ b/src/filter/plugins/meson.build
@@ -26,6 +26,7 @@ filter_plugins = static_library(
   include_directories: inc,
   dependencies: [
     filter_plugins_deps,
+    log_dep,
   ],
 )
 
