test/time/TestFileTime: new unit test

--- a/test/time/meson.build
+++ b/test/time/meson.build
@@ -3,6 +3,10 @@ test_time_sources = [
   'TestISO8601.cxx',
 ]
 
+if is_windows
+  test_time_sources += 'TestFileTime.cxx'
+endif
+
 test(
   'TestTime',
   executable(
