--- a/src/lib/xiph/meson.build
+++ b/src/lib/xiph/meson.build
@@ -5,7 +5,9 @@ if get_option('tremor').enabled()
   # no libvorbis if Tremor was explicitly enabled
   libvorbis_dep = dependency('', required: false)
 else
-  libvorbis_dep = dependency('vorbis', required: get_option('vorbis'))
+  libvorbis_dep = dependency('vorbis',
+                             fallback: ['vorbis', 'vorbis_dep'],
+                             required: get_option('vorbis'))
 endif
 
 if libvorbis_dep.found()
