python/build/libs.py: remove libexpat, switch to Meson wrap

--- a/meson.build
+++ b/meson.build
@@ -12,12 +12,15 @@ project(
 
     # If we build those libraries as Meson subproject, they shall be
     # linked statically into the MPD executable.
+    'expat:default_library=static',
     'fmt:default_library=static',
     'gtest:default_library=static',
     'sqlite3:default_library=static',
     'vorbis:default_library=static',
 
     # Not interested in compiler warnings from subprojects.
+    'expat:werror=false',
+    'expat:warning_level=0',
     'fmt:warning_level=0',
     'gtest:warning_level=0',
     'sqlite3:warning_level=0',
