python/build/libs.py: remove flac, switch to Meson wrap

--- a/src/lib/xiph/meson.build
+++ b/src/lib/xiph/meson.build
@@ -1,4 +1,6 @@
-libflac_dep = dependency('flac', version: '>= 1.2', required: get_option('flac'))
+libflac_dep = dependency('flac', version: '>= 1.2',
+                         fallback: ['flac', 'flac_dep'],
+                         required: get_option('flac'))
 libopus_dep = dependency('opus', required: get_option('opus'))
 
 if get_option('tremor').enabled()
