storage/Plugin: add "prefixes"

--- a/src/storage/meson.build
+++ b/src/storage/meson.build
@@ -1,6 +1,7 @@
 storage_api = static_library(
   'storage_api',
   'StorageInterface.cxx',
+  'StoragePlugin.cxx',
   include_directories: inc,
 )
 
