meson.build: add missing libfmt dependencies
Fixes https://github.com/MusicPlayerDaemon/MPD/discussions/1281

The problem occurred when there was libfmt-dev installed, but it was
too old (e.g. on Debian Buster), and Meson used the wrap fallback.
Those internal MPD libraries where the libfmt dependency was not
declared were still using the old system libfmt headers, which are not
ABI-compatible with MPD's own libfmt build.

--- a/src/lib/upnp/meson.build
+++ b/src/lib/upnp/meson.build
@@ -51,6 +51,7 @@ upnp = static_library(
   'Util.cxx',
   include_directories: inc,
   dependencies: [
+    log_dep,
     upnp_dep,
     curl_dep,
     expat_dep,
