--- a/src/zeroconf/avahi/meson.build
+++ b/src/zeroconf/avahi/meson.build
@@ -13,6 +13,7 @@ avahi = static_library(
   'Publisher.cxx',
   include_directories: inc,
   dependencies: [
+    log_dep,
     libavahi_client,
   ],
 )
