--- a/meson.build
+++ b/meson.build
@@ -267,6 +267,7 @@ sources = [
   'src/protocol/ArgParser.cxx',
   'src/protocol/Result.cxx',
   'src/command/CommandError.cxx',
+  'src/command/PositionArg.cxx',
   'src/command/AllCommands.cxx',
   'src/command/QueueCommands.cxx',
   'src/command/TagCommands.cxx',
