lib/alsa/Error: a std::system_error category for libasound errors

--- a/src/lib/alsa/meson.build
+++ b/src/lib/alsa/meson.build
@@ -14,6 +14,7 @@ conf.set('ENABLE_ALSA', true)
 alsa = static_library(
   'alsa',
   'Version.cxx',
+  'Error.cxx',
   'AllowedFormat.cxx',
   'HwSetup.cxx',
   'NonBlock.cxx',
