CommandLine: add option --systemd
This way, MPD can reliably detect whether it was started as systemd
service, which is better than checking sd_booted(), which only checks
whether systemd manages all services, but still MPD could be started
manually.

--- a/systemd/system/mpd.service.in
+++ b/systemd/system/mpd.service.in
@@ -5,7 +5,7 @@ After=network.target sound.target
 
 [Service]
 Type=notify
-ExecStart=@prefix@/bin/mpd --no-daemon
+ExecStart=@prefix@/bin/mpd --systemd
 
 # Create /run/mpd (if MPD is launched without the socket unit and is
 # configured to bind listener sockets there).
