lib/pcre: migrate to PCRE2
Closes https://github.com/MusicPlayerDaemon/MPD/issues/1352

--- a/src/db/plugins/meson.build
+++ b/src/db/plugins/meson.build
@@ -35,6 +35,7 @@ db_plugins = static_library(
   include_directories: inc,
   dependencies: [
     upnp_dep,
+    pcre_dep,
     libmpdclient_dep,
     log_dep,
   ],
