.github/workflows/build-macos.yml: use actions/setup-python@v1
Without it, BSFishy/meson-build defaults to /usr/local/bin/python,
which is Python 2.

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -37,6 +37,8 @@ jobs:
         with:
           key: ${{ matrix.os }}-${{ matrix.type }}
 
+      - uses: actions/setup-python@v1
+
       - name: Install dependencies
         run: |
           brew install \
