.github/workflows/build-macos.yml: install Meson, ninja and Boost

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -40,7 +40,9 @@ jobs:
       - name: Install dependencies
         run: |
           brew install \
+            meson ninja \
             fmt \
+            boost \
             googletest \
             icu4c \
             ffmpeg \
